dist/1.0/bin/sample/retrieveUnpackaged/objects/Calculation_Version__c.object
<CustomObject>
    <fields>
        <fullName>CBCT_Calculation__c</fullName>
        <description>Link to CBCT calculation</description>
        <formula>IF (OR(ISBLANK(Calculation_Number__c) ,ISNULL(Calculation_Number__c )) ,&apos;Calculation has not been sent yet&apos;, HYPERLINK(&quot;https://is-bct.in.gtsce.com/restricted/showCalculationFamily&quot; &amp; &quot;-&quot; &amp; Opportunity__r.Opportunity_No__c,Calculation_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to CBCT calculation</inlineHelpText>
        <label>CBCT Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Number__c</fullName>
        <description>Calculation Number</description>
        <inlineHelpText>Calculation Number</inlineHelpText>
        <label>Calculation Number</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Related Opportunity</description>
        <inlineHelpText>Related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Calculation Versions</relationshipLabel>
        <relationshipName>Calculation_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <description>Calculation Version Number</description>
        <inlineHelpText>Calculation Version Number</inlineHelpText>
        <label>Version Number</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Calculation Version</label>
    <nameField>
        <label>Calculation Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculation Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>